权限：简化权限拦截器判断流程